Rework SOM60 kernel device trees, added SPI flash support
Bug 13204

Fixed multiple issues exposed by DVK 1.0:

- 1 GBit Ethernet was losing packets
- MMC card CD pin was not functioning and was not even defined in device tree
- SPI Flash was not working and was not recognized.
- PIT scheduling timer was forced through device tree, which is incorrect, and is no longer used at all
- Device tree was activing multiple conflicting pin control definitions on the same pin that causes the last definition wins whatever it is.
- USB Power/ Overcurrent is incorrect

--- a/arch/arm/boot/dts/at91-dvk_su60_somc_lcm.dtsi
+++ b/arch/arm/boot/dts/at91-dvk_su60_somc_lcm.dtsi
@@ -1,5 +1,5 @@
 /*
- * at91-dvk_su60_somc_lcm.dtsi - Device Tree file for the DVK SOM60 LCD board
+ * at91-dvk_su60_somc_lcm.dtsi - Device Tree file for the LCD for the DVK SOM60 board
  *
  *  Copyright (C) 2018 Laird,
  *		  2018 Ben Whitten <ben.whitten@lairdtech.com>
@@ -65,11 +65,12 @@
 	status = "okay";
 
 	ft5426@56 {
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_lcd_ctp_int>;
+
 		/* Actually FT5426 */
 		compatible = "edt,edt-ft5406";
 		reg = <56>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_lcd_ctp_int>;
 
 		interrupt-parent = <&pioC>;
 		interrupts = <28 IRQ_TYPE_EDGE_FALLING>;
