--- a/arch/arm/boot/dts/at91-dvk_su60_somc.dtsi
+++ b/arch/arm/boot/dts/at91-dvk_su60_somc.dtsi
@@ -3,11 +3,17 @@
  *
  *  Copyright (C) 2018 Laird,
  *		  2018 Ben Whitten <ben.whitten@lairdtech.com>
+ *		  2018 Boris Krasnovskiy <boris.krasnovskiy@lairdtech.com>
  *
  * Licensed under GPLv2 or later.
  */
 
+#include "at91-som60.dtsi"
+
 / {
+	model = "Laird DVK SOM60";
+	compatible = "laird,dvk-som60", "laird,som60", "atmel,sama5d36", "atmel,sama5d3", "atmel,sama5";
+
 	sound {
 		compatible = "atmel,asoc-wm8904";
 		pinctrl-names = "default";
@@ -27,25 +33,116 @@
 
 		status = "okay";
 	};
+
+	reg_mmc0_en: reg_mmc0_en_grp {
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_mmc0_en>;
+
+		compatible = "regulator-fixed";
+		regulator-name = "VDD MMC0";
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+
+		gpio = <&pioE 30 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
+	};
+
+	reg_usb_vbus: reg_usb_vbus_grp {
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_usb_vbus>;
+
+		compatible = "regulator-fixed";
+		regulator-name = "VDD USB";
+		regulator-min-microvolt = <5000000>;
+		regulator-max-microvolt = <5000000>;
+
+		gpio = <&pioE 20 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
+		regulator-always-on;
+	};
+
+	ahb {
+		apb {
+			pinctrl@fffff200 {
+				board {
+					pinctrl_mmc0_cd: mmc0_cd {
+						atmel,pins =
+							<AT91_PIOE 31 AT91_PERIPH_GPIO AT91_PINCTRL_DEGLITCH>;
+					};
+
+					pinctrl_mmc0_en: mmc0_en {
+						atmel,pins =
+							<AT91_PIOE 30 AT91_PERIPH_GPIO AT91_PINCTRL_NONE>;
+					};
+
+					pinctrl_usb_vbus: usb_vbus {
+						atmel,pins =
+							<AT91_PIOE 20 AT91_PERIPH_GPIO AT91_PINCTRL_NONE>;
+					};
+
+					pinctrl_usb_oc: usb_oc {
+						atmel,pins =
+							<AT91_PIOE 15 AT91_PERIPH_GPIO AT91_PINCTRL_DEGLITCH>;
+					};
+
+					pinctrl_usba_vbus: usba_vbus {
+					   atmel,pins =
+							<AT91_PIOC 14 AT91_PERIPH_GPIO AT91_PINCTRL_DEGLITCH>;
+					};
+
+					pinctrl_geth_int: geth_int {
+						atmel,pins =
+							<AT91_PIOB 25 AT91_PERIPH_GPIO AT91_PINCTRL_DEGLITCH>;
+					};
+
+					pinctrl_eth_int: eth_int {
+						atmel,pins =
+							<AT91_PIOC 10 AT91_PERIPH_GPIO AT91_PINCTRL_DEGLITCH>;
+					};
+
+					pinctrl_pck2_as_audio_mck: pck2_as_audio_mck {
+						atmel,pins =
+							<AT91_PIOC 15 AT91_PERIPH_B AT91_PINCTRL_NONE>;
+					};
+
+					pinctrl_spi0_cs: spi0_cs {
+						atmel,pins =
+							<AT91_PIOD 13 AT91_PERIPH_A AT91_PINCTRL_NONE>;
+					};
+				};
+			};
+		};
+	};
 };
 
 &mmc0 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_mmc0_clk_cmd_dat0 &pinctrl_mmc0_dat1_3 &pinctrl_mmc0_cd>;
+
+	vmmc-supply = <&reg_mmc0_en>;
 	status = "okay";
 
-	pinctrl-0 = <&pinctrl_mmc0_clk_cmd_dat0 &pinctrl_mmc0_dat1_3 &pinctrl_mmc0_cd>;
 	slot@0 {
+		reg = <0>;
 		bus-width = <4>;
+		cd-gpios = <&pioE 31 GPIO_ACTIVE_HIGH>;
+		cd-inverted;
 	};
 };
 
 &spi0 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_spi0 &pinctrl_spi0_cs>;
+
 	status = "okay";
 
 	/* spi0.0: 4M Flash Macronix MX25R4035FM1IL0 */
 	spi-flash@0 {
-		compatible = "macronix,mx25u4035", "jedec,spi-nor";
-		spi-max-frequency = <33000000>;
+		#address-cells = <1>;
+		#size-cells = <1>;
+		compatible = "jedec,spi-nor";
 		reg = <0>;
+		spi-max-frequency = <50000000>;
 	};
 };
 
@@ -69,21 +166,56 @@
 	status = "okay";
 
 	eeprom@87 {
-		compatible = "giantec,24c32";
+		compatible = "atmel,24c32";
 		reg = <87>;
 		pagesize = <32>;
 	};
 };
 
+&macb0 {
+	status = "okay";
+
+	ethernet-phy@7 {
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_geth_int>;
+
+		reg = <7>;
+		interrupt-parent = <&pioB>;
+		interrupts = <25 IRQ_TYPE_EDGE_FALLING>;
+	};
+};
+
+&macb1 {
+	status = "okay";
+
+	ethernet-phy@1 {
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_eth_int>;
+
+		reg = <1>;
+		interrupt-parent = <&pioC>;
+		interrupts = <10 IRQ_TYPE_EDGE_FALLING>;
+	};
+};
+
 &usart1 {
+	pinctrl-0 = <&pinctrl_usart1 &pinctrl_usart1_rts_cts>;
+	atmel,use-dma-rx;
+	atmel,use-dma-tx;
 	status = "okay";
 };
 
 &usart2 {
+	pinctrl-0 = <&pinctrl_usart2 &pinctrl_usart2_rts_cts>;
+	atmel,use-dma-rx;
+	atmel,use-dma-tx;
 	status = "okay";
 };
 
 &usart3 {
+	pinctrl-0 = <&pinctrl_usart3 &pinctrl_usart3_rts_cts>;
+	atmel,use-dma-rx;
+	atmel,use-dma-tx;
 	status = "okay";
 };
 
@@ -95,10 +227,6 @@
 	status = "okay";
 };
 
-&pit {
-	status = "okay";
-};
-
 &adc0 {
 	status = "okay";
 };
@@ -107,43 +235,12 @@
 	status = "okay";
 };
 
-&macb0 {
-	#address-cells = <1>;
-	#size-cells = <0>;
-	status = "okay";
-
-	ethernet-phy@7 {
-		reg = <7>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_geth_int>;
-		interrupt-parent = <&pioB>;
-		interrupts = <25 IRQ_TYPE_EDGE_FALLING>;
-		txen-skew-ps = <800>;
-		txc-skew-ps = <3000>;
-		rxdv-skew-ps = <400>;
-		rxc-skew-ps = <3000>;
-		rxd0-skew-ps = <400>;
-		rxd1-skew-ps = <400>;
-		rxd2-skew-ps = <400>;
-		rxd3-skew-ps = <400>;
-	};
-};
-
-&macb1 {
-	#address-cells = <1>;
-	#size-cells = <0>;
-	status = "okay";
-
-	ethernet-phy@1 {
-		reg = <1>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_eth_int>;
-		interrupt-parent = <&pioC>;
-		interrupts = <10 IRQ_TYPE_EDGE_FALLING>;
-	};
-};
-
 &usb0 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_usba_vbus>;
+
+	atmel,vbus-gpio = <&pioC 14 GPIO_ACTIVE_HIGH>;
+
 	status = "okay";
 };
 
@@ -154,4 +251,3 @@
 &usb2 {
 	status = "okay";
 };
-
