--- a/arch/arm/configs/som60_defconfig
+++ b/arch/arm/configs/som60_defconfig
@@ -141,10 +141,10 @@ CONFIG_MTD=y
 CONFIG_MTD_CMDLINE_PARTS=y
 CONFIG_MTD_BLOCK=y
 CONFIG_MTD_CFI=y
-CONFIG_MTD_M25P80=m
 CONFIG_MTD_NAND=y
 CONFIG_MTD_NAND_ATMEL=y
-CONFIG_MTD_SPI_NOR=m
+CONFIG_MTD_M25P80=y
+CONFIG_MTD_SPI_NOR=y
 CONFIG_MTD_UBI=y
 CONFIG_MTD_UBI_BLOCK=y
 CONFIG_BLK_DEV_LOOP=y
@@ -249,7 +249,7 @@ CONFIG_I2C_MUX=y
 CONFIG_I2C_AT91=y
 CONFIG_I2C_GPIO=y
 CONFIG_SPI=y
-CONFIG_SPI_ATMEL=m
+CONFIG_SPI_ATMEL=y
 CONFIG_SPI_SPIDEV=m
 # CONFIG_PTP_1588_CLOCK is not set
 CONFIG_GPIO_SYSFS=y
@@ -260,7 +260,8 @@ CONFIG_POWER_SUPPLY=y
 CONFIG_SSB=m
 CONFIG_MFD_ATMEL_HLCDC=m
 CONFIG_REGULATOR=y
-CONFIG_REGULATOR_FIXED_VOLTAGE=m
+CONFIG_REGULATOR_FIXED_VOLTAGE=y
+# CONFIG_RC_CORE is not set
 CONFIG_DRM=m
 CONFIG_DRM_ATMEL_HLCDC=m
 CONFIG_DRM_PANEL_SIMPLE=m
