--- a/arch/arm/configs/wb50n_rdvk_defconfig
+++ b/arch/arm/configs/wb50n_rdvk_defconfig
@@ -20,6 +20,7 @@ CONFIG_MODVERSIONS=y
 CONFIG_ARCH_AT91=y
 CONFIG_SOC_SAMA5D3=y
 # CONFIG_ATMEL_CLOCKSOURCE_PIT is not set
+CONFIG_PCI=y
 CONFIG_PREEMPT=y
 CONFIG_AEABI=y
 CONFIG_CMA=y
@@ -204,6 +205,7 @@ CONFIG_BRCMDBG=y
 # CONFIG_WLAN_VENDOR_INTEL is not set
 # CONFIG_WLAN_VENDOR_INTERSIL is not set
 CONFIG_LRDMWL=m
+CONFIG_LRDMWL_PCIE=m
 CONFIG_LRDMWL_SDIO=m
 CONFIG_LRDMWL_USB=m
 CONFIG_MWIFIEX=m
