laird: arm: defconfigs: wb50n_rdvk: build all LRDMWL interface drivers (again)
Adding support for lrdmwl_pci driver again in rdvk builds.  Used to ensure there are no build breaks on PCI interface, even though there is no PCI interface on the RDVK.
This change was made previously, and incorrectly removed as part of a different checkin.

Bug: 12506

--- a/arch/arm/configs/wb50n_rdvk_defconfig
+++ b/arch/arm/configs/wb50n_rdvk_defconfig
@@ -19,6 +19,7 @@ CONFIG_MODVERSIONS=y
 CONFIG_ARCH_AT91=y
 CONFIG_SOC_SAMA5D3=y
 # CONFIG_ATMEL_CLOCKSOURCE_PIT is not set
+CONFIG_PCI=y
 CONFIG_PREEMPT=y
 CONFIG_CMA=y
 CONFIG_UACCESS_WITH_MEMCPY=y
@@ -202,6 +203,7 @@ CONFIG_BRCMDBG=y
 # CONFIG_WLAN_VENDOR_INTEL is not set
 # CONFIG_WLAN_VENDOR_INTERSIL is not set
 CONFIG_LRDMWL=m
+CONFIG_LRDMWL_PCIE=m
 CONFIG_LRDMWL_SDIO=m
 CONFIG_LRDMWL_USB=m
 CONFIG_MWIFIEX=m
