laird: ARM: dts: at91: Changed SOM60 I2C frequency to 400 kHz for faster operation
Bug 13264

--- a/arch/arm/boot/dts/at91-dvk_su60_somc.dtsi
+++ b/arch/arm/boot/dts/at91-dvk_su60_somc.dtsi
@@ -153,6 +153,7 @@
 
 &i2c0 {
 	status = "okay";
+	clock-frequency = <400000>;
 
 	wm8904: wm8904@1a {
 		compatible = "wlf,wm8904";
@@ -164,6 +165,7 @@
 
 &i2c1 {
 	status = "okay";
+	clock-frequency = <400000>;
 
 	eeprom@87 {
 		compatible = "atmel,24c32";
