Laird:ig60: Add support for Device Service in IG build
Added LED pins required by the Device Service DBUS API in device tree. Also,
configured the power LED as indicator.

bug 13185

--- a/arch/arm/boot/dts/at91-ig60.dts
+++ b/arch/arm/boot/dts/at91-ig60.dts
@@ -18,6 +18,92 @@
 		stdout-path = &dbgu;
 		tick-timer = &pit;
 	};
+
+  gpio_keys {
+      compatible = "gpio-keys";
+      #address-cells = <1>;
+      #size-cells = <0>;
+
+      btn0@pa2 {
+        label = "BTN0";
+        linux,code = <0x100>; /* BTN0 button */
+        gpios = <&pioA 2 GPIO_ACTIVE_LOW>;
+        linux,input-type = <1>; /*EV.KEY*/
+        debounce-interval = <100>; /*Debounce interval 100ms*/
+      };
+  };
+
+  status_leds {
+      compatible = "gpio-leds";
+
+      led@1 {
+          label = "ig60:red:power";
+          gpios = <&pioA 29 GPIO_ACTIVE_LOW>;
+          panic-indicator;
+      };
+
+      led@2 {
+          label = "ig60:green:power";
+          gpios = <&pioA 17 GPIO_ACTIVE_LOW>;
+          linux,default-trigger = "timer";
+          panic-indicator;
+      };
+
+      led@3 {
+          label = "ig60:red:device";
+          gpios = <&pioA 13 GPIO_ACTIVE_LOW>;
+          default-state = "off";
+
+      };
+
+      led@4 {
+          label = "ig60:green:device";
+          gpios = <&pioA 15 GPIO_ACTIVE_LOW>;
+          default-state = "off";
+      };
+
+      led@5 {
+          label = "ig60:red:storage";
+          gpios = <&pioA 18 GPIO_ACTIVE_LOW>;
+          default-state = "off";
+      };
+
+      led@6 {
+          label = "ig60:green:iot";
+          gpios = <&pioA 25 GPIO_ACTIVE_LOW>;
+          default-state = "off";
+      };
+
+      led@7 {
+          label = "ig60:red:signal1";
+          gpios = <&pioA 1 GPIO_ACTIVE_LOW>;
+          default-state = "off";
+      };
+
+      led@8 {
+          label = "ig60:green:signal1";
+          gpios = <&pioA 6 GPIO_ACTIVE_LOW>;
+          default-state = "off";
+      };
+
+      led@9 {
+          label = "ig60:green:signal2";
+          gpios = <&pioA 16 GPIO_ACTIVE_LOW>;
+          default-state = "off";
+      };
+
+      led@10 {
+          label = "ig60:green:signal3";
+          gpios = <&pioA 27 GPIO_ACTIVE_LOW>;
+          default-state = "off";
+      };
+
+      led@11 {
+          label = "ig60:green:signal4";
+          gpios = <&pioA 3 GPIO_ACTIVE_LOW>;
+          default-state = "off";
+      };
+  };
 };
 
 &mmc0 {
@@ -91,4 +177,3 @@
 &usb2 {
 	status = "okay";
 };
-
