--- a/arch/arm/configs/som60_fips_defconfig
+++ b/arch/arm/configs/som60_fips_defconfig
@@ -143,7 +143,7 @@ CONFIG_MTD_CMDLINE_PARTS=y
 CONFIG_MTD_BLOCK=y
 CONFIG_MTD_CFI=y
 CONFIG_MTD_M25P80=m
-CONFIG_MTD_NAND=y
+CONFIG_MTD_RAW_NAND=y
 CONFIG_MTD_NAND_ATMEL=y
 CONFIG_MTD_SPI_NOR=m
 CONFIG_MTD_UBI=y
