--- a/arch/arm/configs/wb50n_sysd_rdvk_defconfig
+++ b/arch/arm/configs/wb50n_sysd_rdvk_defconfig
@@ -130,6 +130,7 @@ CONFIG_BT_BNEP_MC_FILTER=y
 CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=m
 CONFIG_BT_HCIBTUSB=m
+CONFIG_BT_HCIBTUSB_BCM=y
 CONFIG_BT_HCIUART=m
 CONFIG_BT_HCIUART_BCM=y
 CONFIG_BT_MRVL=m
@@ -220,6 +221,7 @@ CONFIG_ATH6KL_REGDOMAIN=y
 CONFIG_ATH6KL_LAIRD_FIPS=y
 # CONFIG_WLAN_VENDOR_ATMEL is not set
 CONFIG_BRCMFMAC=m
+CONFIG_BRCMFMAC_USB=y
 CONFIG_BRCMDBG=y
 # CONFIG_WLAN_VENDOR_CISCO is not set
 # CONFIG_WLAN_VENDOR_INTEL is not set
