--- a/arch/arm/configs/wb50n_rdvk_defconfig
+++ b/arch/arm/configs/wb50n_rdvk_defconfig
@@ -147,6 +147,7 @@ CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_COUNT=4
 CONFIG_BLK_DEV_RAM_SIZE=8192
 CONFIG_ATMEL_SSC=y
+CONFIG_GPIO_WAKEUP=y
 CONFIG_EEPROM_AT24=y
 CONFIG_EEPROM_93CX6=m
 CONFIG_SCSI=y
@@ -244,6 +245,9 @@ CONFIG_POWER_RESET=y
 CONFIG_POWER_SUPPLY=y
 # CONFIG_HWMON is not set
 CONFIG_SSB=m
+CONFIG_WATCHDOG=y
+CONFIG_WATCHDOG_SYSFS=y
+CONFIG_AT91SAM9X_WATCHDOG=y
 # CONFIG_HID_GENERIC is not set
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
@@ -301,6 +305,7 @@ CONFIG_CRC_ITU_T=y
 CONFIG_PRINTK_TIME=y
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=7
 CONFIG_DEBUG_INFO=y
+CONFIG_FRAME_WARN=2048
 CONFIG_STRIP_ASM_SYMS=y
 CONFIG_DEBUG_KMEMLEAK=y
 CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=2000
