--- a/arch/arm/boot/dts/at91-dvk_som60sd_mfg.dts
+++ b/arch/arm/boot/dts/at91-dvk_som60sd_mfg.dts
@@ -1,7 +1,7 @@
 /*
  * at91-dvk_som60sd_mfg.dts - Device Tree file for the Manufacturing SOM60 board
  *
- *  Copyright (C) 2018 Laird,
+ *  Copyright (C) 2018 Laird Connectivity,
  *		  2018 Ben Whitten <ben.whitten@lairdconnect.com>
  *		  2018 Boris Krasnovskiy <boris.krasnovskiy@lairdconnect.com>
  *
