--- a/arch/arm/boot/dts/at91-dvk_su60_somc.dtsi
+++ b/arch/arm/boot/dts/at91-dvk_su60_somc.dtsi
@@ -1,7 +1,7 @@
 /*
  * at91-dvk_su60_somc.dtsi - Device Tree file for the DVK SOM60 base board
  *
- *  Copyright (C) 2018 Laird,
+ *  Copyright (C) 2018 Laird Connectivity,
  *		  2018 Ben Whitten <ben.whitten@lairdconnect.com>
  *		  2018 Boris Krasnovskiy <boris.krasnovskiy@lairdconnect.com>
  *
