--- a/arch/arm/boot/dts/at91-dvk_wb60.dts
+++ b/arch/arm/boot/dts/at91-dvk_wb60.dts
@@ -2,7 +2,7 @@
 /*
  * at91-wb60.dts - Device Tree file for the WB60 board
  *
- *  Copyright (C) 2019 Laird,
+ *  Copyright (C) 2019 Laird Connectivity,
  *		  2019 Boris Krasnovskiy <boris.krasnovskiy@lairdconnect.com>
  *
  * Licensed under GPLv2 or later.
