--- a/arch/arm/boot/dts/at91-ig60.dts
+++ b/arch/arm/boot/dts/at91-ig60.dts
@@ -1,7 +1,7 @@
 /*
  * at91-ig60.dts - Device Tree file for Laird IG60, based on SOM60x2 module
  *
- *  Copyright (C) 2018 Laird,
+ *  Copyright (C) 2018 Laird Connectivity,
  *		  2018 Ben Whitten <ben.whitten@lairdconnect.com>
  *		  2018 Boris Krasnovskiy <boris.krasnovskiy@lairdconnect.com>
  *
