--- a/arch/arm/boot/dts/at91-ig60.dtsi
+++ b/arch/arm/boot/dts/at91-ig60.dtsi
@@ -1,7 +1,7 @@
 /*
  * at91-ig60.dtsi - Device Tree file for Laird IG60 board
  *
- *  Copyright (C) 2018 Laird,
+ *  Copyright (C) 2018 Laird Connectivity,
  *		  2018 Ben Whitten <ben.whitten@lairdconnect.com>
  *		  2018 Boris Krasnovskiy <boris.krasnovskiy@lairdconnect.com>
  *
