--- a/arch/arm/boot/dts/at91-som60x2.dtsi
+++ b/arch/arm/boot/dts/at91-som60x2.dtsi
@@ -2,7 +2,7 @@
 /*
  * at91-som60.dtsi - Device Tree file for the SOM60 module
  *
- *  Copyright (C) 2018 Laird,
+ *  Copyright (C) 2018 Laird Connectivity,
  *		  2018 Ben Whitten <ben.whitten@lairdconnect.com>
  *		  2018 Boris Krasnovskiy <boris.krasnovskiy@lairdconnect.com>
  *
