--- a/arch/arm/boot/dts/at91-wb50n_sysd.dts
+++ b/arch/arm/boot/dts/at91-wb50n_sysd.dts
@@ -2,7 +2,7 @@
 /*
  * at91-wb50n_sysd.dts - Device Tree file for WB50N SYSD Evaluation Board
  *
- *  Copyright (C) 2018 Laird
+ *  Copyright (C) 2018-2020 Laird Connectivity
  *
  */
 
