--- a/arch/arm/configs/ig60_fips_defconfig
+++ b/arch/arm/configs/ig60_fips_defconfig
@@ -436,6 +436,7 @@ CONFIG_STRIP_ASM_SYMS=y
 CONFIG_DEBUG_FS=y
 CONFIG_DETECT_HUNG_TASK=y
 CONFIG_PANIC_TIMEOUT=5
+CONFIG_DM_CRYPT=m
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
